minio-istio/identity/oidc-authservice/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: oidc-authservice
  namespace: istio-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authservice
  serviceName: authservice
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: authservice
    spec:
      serviceAccountName: authservice
      containers:
      - name: authservice
        image: docker.io/kubeflowmanifestswg/oidc-authservice:e236439
        imagePullPolicy: IfNotPresent
        ports:
        - name: http-api
          containerPort: 8080
        volumeMounts:
        - mountPath: /var/lib/authservice
          name: data
        readinessProbe:
          httpGet:
            path: /
            port: 8081
      securityContext:
        fsGroup: 111
      volumes:
      - name: data
        persistentVolumeClaim:
            claimName: authservice-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: authservice
  namespace: istio-system
spec:
  type: ClusterIP
  selector:
    app: authservice
  ports:
  - port: 8080
    name: http-authservice
    targetPort: http-api
  publishNotReadyAddresses: true
